<resources>
    <string name="app_name">Krepco</string>
    <string name="Slogan">Решение для любой задачи</string>

    <string name="test">TEST</string>

    <string name="btn_cnv1">Геометрические</string>
    <string name="btn_cnv2">Механические</string>
    <string name="btn_cnv3">Временные</string>
    <string name="btn_cnv4">Энергетические</string>
    <string name="btn_cnv5">Строительные</string>
    <string name="btn_cnv6">Экономические</string>

    <string name="Type1">Тип:</string>
    <string name="Type2">Тип операции:</string>

    <string name="btn_back1">На главную</string>

    <string name="help_about_title">О программе</string>
    <string name="help_faq_title">Ответы на вопросы</string>
    <string name="help_about_btn">О программе</string>
    <string name="help_faq_btn">Ответы на вопросы</string>

    <string name="help_about_text1">Данная программа представляет собой комплексное решение для частых задач клиентов "Крепко" и значительно упрощает планируемые строительные работы на этапе закупки материалов.</string>
    <string name="help_about_text2">Приложение создано для магазина «Крепко» и объединяет в себе мощные вычислительные инструменты, конвертер единиц и экспертные системы подбора материалов.</string>
    <string name="help_features_title">Основные возможности:</string>
    <string name="help_feature1">• Умные калькуляторы для инженерных, строительных и финансовых расчетов.</string>
    <string name="help_feature2">• Конвертер величин с поддержкой специализированных строительных метрик.</string>
    <string name="help_feature3">• Интерактивные опросники для точного подбора крепежа, утеплителя, напольных и кровельных покрытий.</string>
    <string name="help_feature4">• Информационные блоки с ответами на частые вопросы и методическими рекомендациями.</string>

    <string name="faq_q1">Какие категории единиц поддерживает конвертер?</string>
    <string name="faq_a1">Конвертер поддерживает 6 основных категорий: геометрические (длина, площадь, объем, углы), механические (скорость, масса, давление), временные, энергетические, строительные и экономические величины. Всего более 150 различных единиц измерения.</string>

    <string name="faq_q2">Как работают опросники для подбора материалов?</string>
    <string name="faq_a2">Вы выбираете интересующую тему (крепеж, утеплитель, покрытие и т.д.), отвечаете на 3-5 простых вопросов об условиях эксплуатации, и программа автоматически подбирает оптимальный материал с подробным описанием и рекомендациями.</string>

    <string name="faq_q3">Какие режимы есть в калькуляторе?</string>
    <string name="faq_a3">Калькулятор имеет три режима: инженерный (арифметика, степени, корни, логарифмы, тригонометрия), финансовый (бюджетирование, комиссии, валютные операции) и строительный (расчет материалов, конструктивные расчеты).</string>

    <string name="faq_q4">Можно ли сохранять результаты расчетов?</string>
    <string name="faq_a4">В текущей версии результаты не сохраняются автоматически, но вы можете сделать скриншот экрана или записать результат. В будущих обновлениях планируется добавить историю расчетов.</string>

    <string name="faq_q5">Как добавить новую единицу измерения?</string>
    <string name="faq_a5">Набор единиц фиксирован и соответствует стандартным строительным и инженерным метрикам. Если вам не хватает какой-то единицы, напишите нам - мы рассмотрим возможность добавления в следующих обновлениях.</string>

    <string name="faq_q6">Планируются ли новые функции?</string>
    <string name="faq_a6">Да! В разработке: расширение списка опросников, добавление возможности сравнивать материалы, экспорт расчетов в PDF, синхронизация между устройствами и расширенный финансовый калькулятор с кредитными расчетами.</string>
</resources>