<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayoutHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="11dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgIcn"
                    android:layout_width="359dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/krepco_icn" />

                <TextView
                    android:id="@+id/tvSlogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/Slogan"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCtgGr"
                android:layout_width="348dp"
                android:layout_height="264dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="348dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/header_cnv" />

                <LinearLayout
                    android:id="@+id/linearLayoutCtg1"
                    android:layout_width="327dp"
                    android:layout_height="62dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCtg1"
                        android:layout_width="wrap_content"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv1"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                    <Button
                        android:id="@+id/btnCtg2"
                        android:layout_width="155dp"
                        android:layout_height="65dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv2"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCtg2"
                    android:layout_width="327dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCtg3"
                        android:layout_width="157dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv3"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                    <Button
                        android:id="@+id/btnCtg4"
                        android:layout_width="155dp"
                        android:layout_height="65dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv4"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutCtg3"
                    android:layout_width="327dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCtg5"
                        android:layout_width="157dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv5"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                    <Button
                        android:id="@+id/btnCtg6"
                        android:layout_width="155dp"
                        android:layout_height="65dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="@string/btn_cnv6"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRslt"
                android:layout_width="330dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:background="@color/orange"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutInp"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTxt1"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:drawableBottom="@drawable/white_line"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="text"
                        android:padding="16dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/editTxt2"
                        android:layout_width="150dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:drawableBottom="@drawable/white_line"
                        android:drawablePadding="8dp"
                        android:ems="10"
                        android:inputType="text"
                        android:padding="16dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutMtr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/test"
                        android:background="@color/gray"
                        android:textColor="@color/white" />

                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@color/gray"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutMtrcGr"
                android:layout_width="333dp"
                android:layout_height="146dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutMtrc1"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnMtrc1"
                        android:layout_width="155dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="text"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                    <Button
                        android:id="@+id/btnMtrc2"
                        android:layout_width="173dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="text"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutMtcr2"
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnMtrc3"
                        android:layout_width="155dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="text"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />

                    <Button
                        android:id="@+id/btnMtrc4"
                        android:layout_width="173dp"
                        android:layout_height="65dp"
                        android:layout_marginEnd="4dp"
                        android:background="@null"
                        android:backgroundTint="#3E4041"
                        android:text="text"
                        android:textColor="#FFFFFF"
                        app:cornerRadius="0dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutBack"
                android:layout_width="365dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="4dp"
                    android:background="@null"
                    android:backgroundTint="#3E4041"
                    android:text="@string/btn_back1"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:cornerRadius="0dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>